# MojoAL.NET

./: .gitignore  .gitmodules  CMakeLists.txt  Directory.Build.props  MojoAL.NET.sln  README  build-native.cmd  build-native.sh  vcpkg.json
.github/workflows/: native-build.yml
sources/MojoAL.NET.Native/: MojoAL.NET.Native.csproj
sources/MojoAL.NET.Sample/: MojoAL.NET.Sample.csproj  Sample.cs
toolchains/: aarch64-linux-gnu.toolchain.cmake
